feature: Rebrand to Luzmo

--- a/LuzmoSDK.Test/LuzmoSDK.Test.csproj
+++ b/LuzmoSDK.Test/LuzmoSDK.Test.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFrameworks>net7.0;net6.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CumulioSDK\CumulioSDK.csproj" />
+    <ProjectReference Include="..\LuzmoSDK\LuzmoSDK.csproj" />
   </ItemGroup>
 
 </Project>
